# SimplifAI-Backend

./: Procfile  README.md  apt-packages.txt  main.py  pyproject.toml  render.yaml  requirements.txt  run.py
app/: __init__.py
app/routes/: process.py  tools.py
app/services/: gemini.py  ocr.py
app/utils/: downloader.py
